<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_arrow">

    <fragment
        android:id="@+id/navigation_arrow"
        android:name="com.tsu.alotofquestions.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_photo"
        android:name="com.tsu.alotofquestions.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_scanner"
        android:name="com.tsu.alotofquestions.ui.notifications.ScannerFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/taskFragment"
        android:name="com.tsu.alotofquestions.ui.TaskFragment"
        android:label="fragment_task"
        tools:layout="@layout/fragment_task" />
</navigation>